--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,8 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    # url: /cv/
+    url: /files/curriculum_vitae.pdf
     
   - title: "Guide"
     url: /markdown/
