--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sai Shashank GP"
-  avatar           : "personal-img.jpeg"
+  avatar           : "personal-img2.jpeg"
   bio              : "Senior Year Undergraduate in the Dept. of Electrical Engineering, Indian Institute of Technology Madras"
   location         : "Chennai, TN"
   employer         :
